# Kataglyphis-RustProjectTemplate

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  combined-theme.css  deny.toml  rustfmt.toml
.cargo/: audit.toml
.codacy/: cli.sh  codacy.yaml
.github/: FUNDING.yml
.github/actions/cleanup-disk-space/: action.yml
.github/instructions/: codacy.instructions.md
.github/scripts/: compute_version.sh
.github/workflows/: build.yml  rust-ubuntu-24.04-arm.yml  rust-ubuntu24.04.yml  rust-windows2025.yml  rust.yml  rust_build.yml  rust_doc.yml  rust_package.yml  rust_test.yml  rust_ubuntu24_04.yml  rust_ubuntu_24_04_arm.yml  rust_windows2025.yml  test.yml
Scripts/Linux/: run_person_detection.sh  start_docker_person_detection.sh
Scripts/Windows/: AppxManifest.xml.template  Build-Windows.config.psd1  Build-Windows.ps1  Invoke-DebugTests.ps1  Invoke-WindowsConfigMatrix.ps1  Run-AppProfiles.ps1
Scripts/Windows/Container/: Invoke-StevedoreBuild.ps1  rust-build-all.ps1  rust-test-all.ps1
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  detection.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: gui.rs  lib.rs
crates/gui/src/gui_wgpu/: egui_overlay.rs  inference.rs  inference_bridge.rs  mod.rs  overlay.rs  overlay_stats.rs  pipeline.rs  renderer.rs  wgpu_init.rs
crates/gui/src/shaders/: tex_quad.wgsl
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs  ort_ext.rs
crates/inference/src/person_detection/: mod.rs  model_utils.rs  ort_backend.rs  postprocess.rs  preprocess.rs
crates/media/: Cargo.toml
crates/media/src/: capture.rs  devices.rs  lib.rs  runtime.rs
crates/media/tests/: capture_test.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: gpu_wmi.rs  lib.rs  resource_monitor.rs
crates/webgpu_renderer/: Cargo.toml  README.md
crates/webgpu_renderer/examples/: dump_gpu_timings.rs  export_shaders.rs  headless_render.rs  obj2gltf.rs  viewer.rs
crates/webgpu_renderer/src/: context.rs  lib.rs  wasm_demo.rs
crates/webgpu_renderer/src/asset/: gltf_loader.rs  hdr.rs  ktx2_loader.rs  mod.rs  obj_to_gltf.rs
crates/webgpu_renderer/src/render/: auto_exposure.rs  bloom.rs  forward.rs  gpu_timing.rs  graph.rs  histogram.rs  ibl.rs  mod.rs  occlusion.rs  overlay.rs  ssao.rs  tonemap.rs
crates/webgpu_renderer/src/scene/: camera.rs  controller.rs  lod.rs  mod.rs  qem.rs
crates/webgpu_renderer/src/shaders/: bloom.wgsl  forward.wgsl  histogram.wgsl  ibl.wgsl  occlusion_bbox.wgsl  sky.wgsl  ssao.wgsl  tonemap.wgsl
crates/webgpu_renderer/tests/: gpu_timing.rs  headless.rs  histogram.rs  ibl.rs  ktx2.rs  lod_pipeline.rs  obj_to_gltf.rs  occlusion.rs  qem.rs  shader_export.rs  skinned_bounds.rs
crates/webgpu_renderer/tests/assets/: cube.glb  cube.gltf  cube_alpha.gltf  cube_animated.gltf  cube_emissive_strength.gltf  cube_morph.gltf  cube_on_plane.gltf  cube_textured.gltf  cube_unlit.gltf  point_light.gltf  red_bc1.ktx2  skinned_bar.gltf
crates/webgpu_renderer/web/: index.html
docs/: conf.py  getting-started.md  index.rst
fuzz/: Cargo.toml
kataglyphis-rustprojecttemplate/: .gitignore  Cargo.toml  rustfmt.toml
kataglyphis-rustprojecttemplate/fuzz/: Cargo.toml
kataglyphis-rustprojecttemplate/src/: main.rs  utils.rs
kataglyphis-rustprojecttemplate/tests/: integration.rs  stats.txt
logs/windows/: build-summary-20260328-170721.json  build-summary-20260328-193448.json  build-summary-20260328-211137.json  build-summary-20260328-215618.json  build-summary-20260328-225618.json  build-summary-20260329-102915.json  build-summary-20260329-132729.json
packaging/flatpak/: ensure-ref.sh  icon.png.b64  kataglyphis.appdata.xml  kataglyphis.desktop  kataglyphis.flatpak.json
packaging/msix/: AppxManifest.template.xml
resources/web/: combined-theme.css  rustdoc-mapping.css
resources/web/redirect/: index.html
scripts/linux/: cago_update.sh  cargo_build_doc.sh  cargo_fmt_clippy.sh  cargo_security_checks.sh
scripts/windows/: Build-Windows.ps1  New-MsixPackage.ps1  build-windows.ps1
src/: cli.rs  config.rs  detection.rs  frb_generated.rs  gpu_wmi.rs  gui.rs  gui_windows.rs  lib.rs  logging.rs  main.rs  native_only.rs  ort_ext.rs  person_detection.rs  resource_monitor.rs  utils.rs  webcam_engine.rs
src/api/: mod.rs  onnx.rs  simple.rs  webcam.rs
src/burn_demos/: lcg.rs  losses.rs  mod.rs  onnx_yolov10.rs  plot.rs  simple.rs  two_moons.rs  yolo.rs
src/gui_wgpu/: inference.rs  inference_bridge.rs  mod.rs  overlay.rs  overlay_stats.rs  pipeline.rs  renderer.rs  wgpu_init.rs
src/person_detection/: mod.rs  model_utils.rs  ort_backend.rs  preprocess.rs  tract_backend.rs
src/platform/: mod.rs  native.rs  wasm.rs
tests/: fuzz_test.rs
tests/integration/: integration.rs
wix/: License.rtf  main.wxs
