[package]
name = "kataglyphis_rustprojecttemplate"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Kataglyphis/Kataglyphis-RustProjectTemplate"
description = "Rust project template with optional GUI, ONNX backends, profiling, packaging, and CI workflows."
readme = "README.md"
rust-version = "1.92.0"

[lib]
name = "kataglyphis_rustprojecttemplate"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# CLI-only by default to avoid GTK/GStreamer on Windows.
default = []
gui = ["dep:gstreamer", "dep:gstreamer-video", "dep:glib"]
gui_unix = ["gui", "dep:gtk"]
gui_linux = [
	"gui",
	"dep:gstreamer-app",
	"dep:winit",
	"dep:wgpu",
	"dep:pollster",
	"dep:bytemuck",
	"dep:egui",
	"dep:egui-winit",
	"dep:egui-wgpu",
	"onnx_tract",
]
gui_wgpu = ["gui_windows"]
gui_windows = [
	"gui",
	"dep:gstreamer-app",
	"dep:winit",
	"dep:wgpu",
	"dep:pollster",
	"dep:bytemuck",
	"dep:egui",
	"dep:egui-winit",
	"dep:egui-wgpu",
	"onnx_tract",
]

# Pure-Rust ONNX backend (CPU) via tract.
onnx_tract = ["dep:tract-onnx", "dep:image"]

# Optional ONNX Runtime backend (Windows): enables GPU inference via DirectML when available.
onnxruntime = ["dep:ort", "dep:image", "ort/std", "ort/ndarray", "ort/download-binaries", "ort/tls-native"]
onnxruntime_directml = ["onnxruntime", "ort/directml"]
onnxruntime_cuda = ["onnxruntime", "ort/cuda"]

# Prototyping playground: Burn demos + optional ONNX Runtime demo.
# Kept behind a feature so the template stays lightweight by default.
burn_demos = [
	"dep:burn",
	"dep:burn-autodiff",
	"dep:burn-ndarray",
	"dep:ndarray",
	"dep:plotters",
	"onnxruntime",
]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11.9"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.38"
gtk = { version = "0.11", package = "gtk4", features = ["v4_10"], optional = true }
gstreamer = { version = "0.25.1", optional = true }
gstreamer-video = { version = "0.25.0", optional = true }
glib = { version = "0.22.2", optional = true }
gstreamer-app = { version = "0.25.0", optional = true }
winit = { version = "0.30", optional = true }
wgpu = { version = "28.0.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.25", features = ["derive"], optional = true }
egui = { version = "0.33.3", optional = true }
egui-winit = { version = "0.33.3", optional = true }
egui-wgpu = { version = "0.33.3", optional = true }

# ONNX inference (optional)
tract-onnx = { version = "0.22", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false }

# Burn demos (optional)
burn = { version = "0.20.1", default-features = false, features = ["std", "ndarray", "autodiff"], optional = true }
burn-autodiff = { version = "0.20.1", optional = true }
burn-ndarray = { version = "0.20.1", optional = true }
ndarray = { version = "0.17", optional = true }
plotters = { version = "0.3", optional = true }

# Tokio on wasm only supports a small subset of features.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cxx = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time", "sync"] }
js-sys = "=0.3.91"
wasm-bindgen = "=0.2.114"

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
wmi = "0.18"

[lints.rust]
# Declare custom cfgs so the `unexpected_cfgs` lint stays quiet:
# - `frb_expand`: used internally by `flutter_rust_bridge::frb`.
# - `onnx`: emitted by build.rs when any ONNX backend feature is active.
# - `gui_wgpu_backend`: emitted by build.rs when the WGPU GUI path is active.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)', 'cfg(onnx)', 'cfg(gui_wgpu_backend)'] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cxx-build = "1.0"

# ── Release profile ─────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Dev profile: faster incremental builds with basic optimisation for deps.
[profile.dev.package."*"]
opt-level = 2

[[bin]]
name = "burn-demos"
path = "src/bin/burn_demos.rs"
required-features = ["burn_demos"]
