[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/telemetry",
    "crates/inference",
    "crates/gui",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Kataglyphis/Kataglyphis-RustProjectTemplate"
rust-version = "1.92.0"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11.10"
anyhow = "1"
chrono = "0.4"
tokio = "1"
clap = { version = "4", features = ["derive"] }
burn = { version = "0.20.1", default-features = false }
burn-autodiff = { version = "0.20.1" }
burn-ndarray = { version = "0.20.1" }
ndarray = { version = "0.17" }
plotters = { version = "0.3" }
tempfile = { version = "3" }
ort = { version = "=2.0.0-rc.12", default-features = false }
sysinfo = "0.38"
flutter_rust_bridge = "=2.11.1"
wmi = "0.18"

[package]
name = "kataglyphis_rustprojecttemplate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust project template with optional GUI, ONNX backends, profiling, packaging, and CI workflows."
readme = "README.md"
rust-version.workspace = true

[lib]
name = "kataglyphis_rustprojecttemplate"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
gui = ["kataglyphis_gui/gui"]
gui_unix = ["kataglyphis_gui/gui_unix"]
gui_linux = ["kataglyphis_gui/gui_linux"]
gui_wgpu = ["kataglyphis_gui/gui_wgpu"]
gui_windows = ["kataglyphis_gui/gui_windows"]
onnx_tract = ["kataglyphis_inference/onnx_tract"]
onnxruntime = ["kataglyphis_inference/onnxruntime", "dep:ort", "ort/std"]
onnxruntime_directml = ["kataglyphis_inference/onnxruntime_directml"]
onnxruntime_cuda = ["kataglyphis_inference/onnxruntime_cuda"]
burn_demos = ["dep:burn", "dep:burn-autodiff", "dep:burn-ndarray", "dep:ndarray", "dep:plotters", "dep:tempfile", "onnxruntime"]

[dependencies]
kataglyphis_core = { path = "crates/core" }
kataglyphis_telemetry = { path = "crates/telemetry" }
kataglyphis_inference = { path = "crates/inference", optional = true }
kataglyphis_gui = { path = "crates/gui", optional = true }
clap = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

flutter_rust_bridge = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }

burn = { workspace = true, features = ["std", "ndarray", "autodiff"], optional = true }
burn-autodiff = { workspace = true, optional = true }
burn-ndarray = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
plotters = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
ort = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cxx = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time", "sync"] }
js-sys = "=0.3.77"
wasm-bindgen = "=0.2.100"

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
wmi = { workspace = true }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)', 'cfg(onnx)', 'cfg(gui_wgpu_backend)'] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cxx-build = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-threads", "--enable-bulk-memory"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev.package."*"]
opt-level = 2

[[bin]]
name = "burn-demos"
path = "src/bin/burn_demos.rs"
required-features = ["burn_demos"]
