[package]
name = "kataglyphis_gui"
version.workspace = true
edition.workspace = true

[features]
default = []
gui = ["dep:gstreamer"]
gui_unix = ["gui", "dep:gtk"]
gui_linux = ["gui", "_gui_wgpu_deps"]
gui_wgpu = ["gui_windows"]
gui_windows = ["gui", "_gui_wgpu_deps"]
_gui_wgpu_deps = [
    "dep:gstreamer-app",
    "dep:winit",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui-wgpu",
]
onnx_tract = ["kataglyphis_inference/onnx_tract"]
onnxruntime = ["kataglyphis_inference/onnxruntime"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
kataglyphis_core = { path = "../core" }
kataglyphis_inference = { path = "../inference", optional = true }
kataglyphis_telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["sync", "time"] }
chrono = { workspace = true }

gtk = { version = "0.11", package = "gtk4", features = ["v4_10"], optional = true }
gstreamer = { version = "0.25.1", optional = true }
gstreamer-app = { version = "0.25.0", optional = true }
winit = { version = "0.30", optional = true }
wgpu = { version = "27.0.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.25", features = ["derive"], optional = true }
egui = { version = "0.34.1", optional = true }
egui-winit = { version = "0.33.3", optional = true }
egui-wgpu = { version = "0.33.3", optional = true }
sysinfo = { workspace = true }

[lints]
workspace = true
