[package]
name = "kataglyphis_telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
wmi = { workspace = true }

[lints]
workspace = true
