[package]
name = "kataglyphis_webgpu_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU (wgpu) renderer with glTF loading; runs native and on wasm32 via WebGPU."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
wgpu = "27.0.1"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
gltf = { version = "1", features = ["import"] }

[lints]
workspace = true
