[package]
name = "kataglyphis_webgpu_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU (wgpu) renderer with glTF loading; runs native and on wasm32 via WebGPU."

[lib]
# cdylib is what wasm-bindgen consumes for the wasm32 browser demo; rlib
# keeps the crate usable as a normal dependency and for tests/examples.
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
wgpu = "27.0.1"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
gltf = { version = "1", features = ["import", "KHR_lights_punctual", "KHR_texture_transform"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = { version = "0.33.3", default-features = false }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }

[lints]
workspace = true
