[package]
name = "kataglyphis_webgpu_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU (wgpu) renderer with glTF loading; runs native and on wasm32 via WebGPU."
readme = "README.md"

[lib]
# cdylib is what wasm-bindgen consumes for the wasm32 browser demo; rlib
# keeps the crate usable as a normal dependency and for tests/examples.
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
gltf = { version = "1", features = ["import", "KHR_lights_punctual", "KHR_texture_transform", "KHR_materials_emissive_strength", "KHR_materials_unlit"] }
# MikkTSpace reference tangent generation (opt-in; the default stays Lengyel).
# bevy_mikktspace is the pure-Rust port - unlike the `mikktspace` crate it does
# NOT pull the stale nalgebra 0.26 (which is future-incompat on current rustc).
bevy_mikktspace = "1"
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false }
ktx2 = "0.5"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
# Shader interop with the C++ Vulkan engine: WGSL -> SPIR-V / GLSL.
naga = { version = "29", features = ["wgsl-in", "spv-out", "glsl-out"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }

[lints]
workspace = true
